src/test/contracts/negative/pattern_match7.jsligo
let foo = ([a,b,c,d] : [int,int,int]) : int => a + b + c + d;
